--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT Wings WebTech Solutions</title>
+    <title>It Wings Webtech Solutions</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,45 +28,52 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- header -->
-    <header>
+    <!-- Header -->
+    <header class="site-header">
       <nav class="nav-bar">
         <div class="container">
           <div
-            class="nav-wrapper d-flex align-items-center justify-content-between"
+            class="nav-wrapper d-flex align-items-center justify-content-between py-3"
           >
-            <!-- logo class -->
-            <div class="logo d-flex align-items-center justify-content-center">
-              <figure>
-                <img src="" alt="It Wings Wentech Solutions" />
+            <!-- Logo -->
+            <div class="logo d-flex align-items-center">
+              <figure class="mb-0 me-2">
+                <img src="./images/logo.png" alt="IT Wings WebTech Solutions" />
               </figure>
-              <div class="humbergur">
-                <i class="fa-solid fa-bars"></i>
-              </div>
             </div>
-            <!-- nav menu -->
-            <div class="nav-menu">
-              <ul class="d-flex gap-5 poppins">
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">E-Learning</a></li>
-                <li><a href="#">Course</a></li>
-                <li><a href="#">Contact Us</a></li>
+
+            <!-- Hamburger Icon (Mobile) -->
+            <div class="hamburger d-md-none">
+              <i class="fa-solid fa-bars"></i>
+            </div>
+
+            <!-- Navigation Menu -->
+            <div class="nav-menu d-none d-md-block">
+              <ul class="d-flex align-items-center gap-4 mb-0">
+                <li><a href="./index.html" class="activee">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./service.html">Service</a></li>
+                <li><a href="./elearning.html">E-Learning</a></li>
+                <li><a href="./course.html">Course</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
                 <li><a href="#">Career</a></li>
               </ul>
             </div>
 
-            <!-- connect btn -->
-            <div class="contact-us">
-              <a href="./contact.html" target="_blank">Start a project</a>
+            <!-- Contact Button -->
+            <div class="contact-us d-none d-md-block">
+              <a
+                href="./contact.html"
+                target="_blank"
+                class="btn-primary-outline"
+              >
+                Start a Project
+              </a>
             </div>
           </div>
         </div>
       </nav>
     </header>
-
-    <!-- main -->
 
     <!-- footer -->
 
