--- a/service.html
+++ b/service.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Service</title>
+    <!-- bootstrape -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,7 +39,10 @@
             <!-- Logo -->
             <div class="logo d-flex align-items-center">
               <figure class="mb-0 me-2">
-                <img src="./images/logo.png" alt="IT Wings WebTech Solutions" />
+                <img
+                  src="./images/service-banner.jpg"
+                  alt="IT Wings WebTech Solutions"
+                />
               </figure>
             </div>
 
@@ -48,14 +52,14 @@
             </div>
 
             <!-- Navigation Menu -->
-            <div class="nav-menu d-none d-md-block">
-              <ul class="d-flex align-items-center gap-4 mb-0">
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">E-Learning</a></li>
-                <li><a href="#">Course</a></li>
-                <li><a href="#">Contact Us</a></li>
+            <div class="nav-menu">
+              <ul class="align-items-center gap-4 mb-0">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./service.html" class="activee">Service</a></li>
+                <li><a href="./elearning.html">E-Learning</a></li>
+                <li><a href="./course.html">Course</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
                 <li><a href="#">Career</a></li>
               </ul>
             </div>
@@ -99,13 +103,18 @@
     </section>
 
     <!-- main -->
+    <main>
+      <section class="service">
+        <div class="container">
+          <div class="service-wrapper"></div>
+        </div>
+      </section>
+    </main>
     <!-- Service Career / Stats Section -->
     <section class="service-career py-5">
       <div class="container">
         <div class="service-career-wrapper text-center">
-          <ul
-            class="career-stats d-flex flex-wrap justify-content-center align-items-center gap-4 mb-0"
-          >
+          <ul class="career-stats mb-0">
             <li class="stat-box">
               <h3>Years of Experience</h3>
               <p>10+</p>
@@ -128,20 +137,18 @@
     </section>
 
     <!-- service card section -->
-    <section class="service-provide py-2 overflow-y-hidden" id="services">
+    <section class="service-provide py-4 overflow-y-hidden" id="services">
       <div class="container">
         <div class="provide-wrapper d-flex flex-column align-items-center">
           <!-- service content -->
-          <div class="provide-content d-flex flex-column text-primary">
-            <div
-              class="provide-content d-flex flex-column text-primary text-center"
-            >
-              <h2 class="text-bold">Services That Drive Success</h2>
-              <p>
-                Explore what we do best — creating digital products that make an
-                impact.
-              </p>
-            </div>
+          <div
+            class="provide-content d-flex flex-column text-primary text-center"
+          >
+            <h2 class="text-bold">Services That Drive Success</h2>
+            <p>
+              Explore what we do best — creating digital products that make an
+              impact.
+            </p>
           </div>
           <!-- Service Filter & Search -->
           <div
