--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,10 @@
             <!-- Logo -->
             <div class="logo d-flex align-items-center">
               <figure class="mb-0 me-2">
-                <img src="./images/logo.png" alt="IT Wings WebTech Solutions" />
+                <img
+                  src="./images/service-banner.jpg"
+                  alt="IT Wings WebTech Solutions"
+                />
               </figure>
             </div>
 
@@ -48,8 +51,8 @@
             </div>
 
             <!-- Navigation Menu -->
-            <div class="nav-menu d-none d-md-block">
-              <ul class="d-flex align-items-center gap-4 mb-0">
+            <div class="nav-menu">
+              <ul class="align-items-center gap-4 mb-0">
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./service.html">Service</a></li>
@@ -76,6 +79,90 @@
     </header>
 
     <!-- footer -->
+    <footer class="footer">
+      <div class="footer-cta">
+        <div class="container">
+          <h2>Ready to work with us?</h2>
+          <p>
+            Join us to experience cutting-edge industrial solutions that drive
+            innovation and lasting success.
+          </p>
+          <a href="contact.html" class="btn-primary">Get in Touch</a>
+        </div>
+      </div>
+
+      <div class="footer-main">
+        <div class="container footer-grid">
+          <!-- Logo & About -->
+          <div class="footer-col about">
+            <img
+              src="images/service-banner.jpg"
+              alt="ProFactory Logo"
+              class="footer-logo"
+            />
+            <p>
+              We are committed to providing personalized industrial solutions
+              that transform your business.
+            </p>
+            <div class="social-icons">
+              <a href="#" target="_blank"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+              <a href="#" target="_blank"
+                ><i class="fa-brands fa-x-twitter"></i
+              ></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a href="#" target="_blank"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+            </div>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="footer-col">
+            <h4>Quick Links</h4>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Services</a></li>
+            </ul>
+          </div>
+
+          <!-- Legal -->
+          <div class="footer-col">
+            <h4>Security</h4>
+            <ul>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="footer-col">
+            <h4>Contact</h4>
+            <ul class="contact-info">
+              <li><a href="tel:+91123654789">+91 123654789</a></li>
+              <li>
+                <a href="mailto:info@domainname.com">info@domainname.com</a>
+              </li>
+              <li>
+                <a href="https://goo.gl/maps/XYZ" target="_blank"
+                  >520, West Valley, Amin and Minim</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
+      </div>
+    </footer>
 
     <!-- bootstrape -->
     <script
