Add Career page and update navigation links across multiple pages

--- a/career.html
+++ b/career.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Service</title>
+    <!-- bootstrape -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -56,12 +57,10 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./service.html">Service</a></li>
-                <li>
-                  <a href="./elearning.html" class="activee">E-Learning</a>
-                </li>
+                <li><a href="./elearning.html">E-Learning</a></li>
                 <li><a href="./course.html">Course</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>
-                <li><a href="./career.html">Career</a></li>
+                <li><a href="./career.html" class="activee">Career</a></li>
               </ul>
             </div>
 
@@ -80,7 +79,7 @@
       </nav>
     </header>
 
-    <!-- footer -->
+    <!-- Footer -->
     <footer class="footer">
       <div class="footer-cta">
         <div class="container">
@@ -165,26 +164,5 @@
         <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
-
-    <!-- bootstrape -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-    <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!-- owl crousal -->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- aos js  -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        once: false,
-        mirror: true,
-      });
-    </script>
-    <!-- global js -->
-    <script src="./js/script.js"></script>
   </body>
 </html>
