--- a/service.html
+++ b/service.html
@@ -60,7 +60,7 @@
                 <li><a href="./elearning.html">E-Learning</a></li>
                 <li><a href="./course.html">Course</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>
-                <li><a href="#">Career</a></li>
+                <li><a href="./career.html">Career</a></li>
               </ul>
             </div>
 
@@ -87,15 +87,24 @@
       <div class="overlay"></div>
       <div class="container text-center text-white position-relative">
         <div class="service-banner-content">
-          <h1 class="fw-bold mb-3">
+          <h1 class="fw-bold mb-3" data-aos="fade-right" data-aos-delay="300">
             Transforming Ideas Into Powerful Digital Solutions
           </h1>
-          <p class="lead text-light mb-4">
+          <p
+            class="lead text-light mb-4"
+            data-aos="fade-left"
+            data-aos-delay="300"
+          >
             From stunning websites to scalable web applications — we design,
             develop, and deliver technology that elevates your business presence
             online.
           </p>
-          <a href="#services" class="btn btn-primary px-4 py-2">
+          <a
+            href="#services"
+            class="btn btn-primary px-4 py-2"
+            data-aos="fade-up"
+            data-aos-delay="300"
+          >
             Explore Services
           </a>
         </div>
@@ -107,7 +116,11 @@
       <!-- Service Career / Stats Section -->
       <section class="service-career py-5">
         <div class="container">
-          <div class="service-career-wrapper text-center">
+          <div
+            class="service-career-wrapper text-center"
+            data-aos="fade-down"
+            data-aos-delay="300"
+          >
             <ul class="career-stats mb-0">
               <li class="stat-box">
                 <h3>Years of Experience</h3>
@@ -138,8 +151,10 @@
             <div
               class="provide-content d-flex flex-column text-primary text-center"
             >
-              <h2 class="text-bold">Services That Drive Success</h2>
-              <p>
+              <h2 class="text-bold" data-aos="fade-right" data-aos-delay="300">
+                Services That Drive Success
+              </h2>
+              <p data-aos="fade-left" data-aos-delay="300">
                 Explore what we do best — creating digital products that make an
                 impact.
               </p>
@@ -169,7 +184,11 @@
             </div>
 
             <!-- Service Cards -->
-            <div class="show-all-service row g-4">
+            <div
+              class="show-all-service row g-4"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
               <!-- service card -->
               <div class="col-md-4 col-sm-6 service govt">
                 <div
@@ -432,8 +451,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
-        once: false,
-        mirror: true,
+        once: true,
+        mirror: false,
       });
     </script>
     <!-- global js -->
