--- a/course.html
+++ b/course.html
@@ -59,7 +59,7 @@
                 <li><a href="./elearning.html">E-Learning</a></li>
                 <li><a href="./course.html" class="activee">Course</a></li>
                 <li><a href="./contact.html">Contact Us</a></li>
-                <li><a href="#">Career</a></li>
+                <li><a href="./career.html">Career</a></li>
               </ul>
             </div>
 
