--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Service</title>
+    <title>What We Do Best</title>
     <!-- bootstrape -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -81,32 +81,34 @@
 
     <!-- service banner -->
     <section
-      class="service-banner d-flex align-items-center justify-content-center"
+      class="service-banner global-banner d-flex align-items-center justify-content-center"
       style="background-image: url('./images/service-banner.jpg')"
     >
       <div class="overlay"></div>
       <div class="container text-center text-white position-relative">
-        <div class="service-banner-content">
-          <h1 class="fw-bold mb-3" data-aos="fade-right" data-aos-delay="300">
-            Transforming Ideas Into Powerful Digital Solutions
-          </h1>
-          <p
-            class="lead text-light mb-4"
-            data-aos="fade-left"
-            data-aos-delay="300"
-          >
-            From stunning websites to scalable web applications — we design,
-            develop, and deliver technology that elevates your business presence
-            online.
-          </p>
-          <a
-            href="#services"
-            class="btn btn-primary px-4 py-2"
-            data-aos="fade-up"
-            data-aos-delay="300"
-          >
-            Explore Services
-          </a>
+        <div class="service-wrapper global-wrapper">
+          <div class="service-banner-content global-content">
+            <h1 class="fw-bold mb-3" data-aos="fade-right" data-aos-delay="300">
+              Transforming Ideas Into Powerful Digital Solutions
+            </h1>
+            <p
+              class="lead text-light mb-4"
+              data-aos="fade-left"
+              data-aos-delay="300"
+            >
+              From stunning websites to scalable web applications — we design,
+              develop, and deliver technology that elevates your business
+              presence online.
+            </p>
+            <a
+              href="#services"
+              class="btn btn-primary px-4 py-2"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              Explore Services
+            </a>
+          </div>
         </div>
       </div>
     </section>
