--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,269 @@
       </nav>
     </header>
 
+    <section
+      class="global-banner contact-banner"
+      data-aos="fade-in"
+      data-aos-duration="1200"
+      data-aos-mirror="true"
+      data-aos-once="false"
+      style="background-image: url(images/contact-banner.jpg)"
+    >
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="about-content-main global-wrapper">
+          <div class="about-text global-content">
+            <h1
+              data-aos="fade-up"
+              data-aos-duration="1000"
+              data-aos-delay="200"
+              data-aos-mirror="true"
+              data-aos-once="false"
+            >
+              Contact
+              <span
+                data-aos="fade-up"
+                data-aos-duration="1000"
+                data-aos-delay="400"
+                data-aos-mirror="true"
+                data-aos-once="false"
+              >
+                Us</span
+              >
+            </h1>
+            <p
+              class="lead text-light mb-4"
+              data-aos="fade-left"
+              data-aos-delay="300"
+            >
+              Got a spark of an idea or a big project brewing? Don’t keep it to
+              yourself — let’s make it happen together! Drop us a message, and
+              our team will get back faster than your morning coffee kicks in
+              ☕. We’re just one click away from turning your vision into
+              reality.
+            </p>
+            <a
+              href="#myForm"
+              class="btn btn-primary px-4 py-2"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              Send Your enquiry
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <main>
+      <section
+        class="cnt-sec-one"
+        data-aos="fade-in"
+        data-aos-duration="1200"
+        data-aos-mirror="true"
+        data-aos-once="false"
+      >
+        <div class="container">
+          <div class="contact-top-part">
+            <div class="row">
+              <div
+                class="col-lg-5"
+                data-aos="fade-right"
+                data-aos-duration="1000"
+                data-aos-delay="200"
+                data-aos-mirror="true"
+                data-aos-once="false"
+              >
+                <div class="left-part">
+                  <p
+                    class="title"
+                    data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="300"
+                    data-aos-mirror="true"
+                    data-aos-once="false"
+                  >
+                    CONTACT US
+                  </p>
+                  <h2
+                    data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="400"
+                    data-aos-mirror="true"
+                    data-aos-once="false"
+                  >
+                    Get in touch
+                    <span
+                      data-aos="fade-up"
+                      data-aos-duration="800"
+                      data-aos-delay="500"
+                      data-aos-mirror="true"
+                      data-aos-once="false"
+                      >with us</span
+                    >
+                  </h2>
+                  <p
+                    data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="600"
+                    data-aos-mirror="true"
+                    data-aos-once="false"
+                  >
+                    Reach out for any inquiries, support, or to discuss how we
+                    can meet your industrial needs.
+                  </p>
+
+                  <div
+                    class="cnt-icon-part"
+                    data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="700"
+                    data-aos-mirror="true"
+                    data-aos-once="false"
+                  >
+                    <div class="icon-part">
+                      <i class="fa-solid fa-phone-volume"></i>
+                    </div>
+                    <div class="right-text">
+                      <h4>Contact</h4>
+                      <p>+1.809.120.670</p>
+                    </div>
+                  </div>
+
+                  <div
+                    class="cnt-icon-part"
+                    data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="800"
+                    data-aos-mirror="true"
+                    data-aos-once="false"
+                  >
+                    <div class="icon-part">
+                      <i class="fa-solid fa-envelope-circle-check"></i>
+                    </div>
+                    <div class="right-text">
+                      <h4>E-mail</h4>
+                      <p>info@domainname.com</p>
+                    </div>
+                  </div>
+
+                  <div
+                    class="cnt-icon-part last-icon-part"
+                    data-aos="fade-up"
+                    data-aos-duration="800"
+                    data-aos-delay="900"
+                    data-aos-mirror="true"
+                    data-aos-once="false"
+                  >
+                    <div class="icon-part">
+                      <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                    <div class="right-text">
+                      <h4>Our Address</h4>
+                      <p>37 San Juan Lane Graaf Florisstraat 22A,3021 CH</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div
+                class="col-lg-7"
+                data-aos="fade-left"
+                data-aos-duration="1000"
+                data-aos-delay="400"
+                data-aos-mirror="true"
+                data-aos-once="false"
+              >
+                <div class="right-part">
+                  <div class="contact-container">
+                    <h2
+                      data-aos="fade-up"
+                      data-aos-duration="800"
+                      data-aos-delay="500"
+                      data-aos-mirror="true"
+                      data-aos-once="false"
+                    >
+                      Contact
+                      <span
+                        data-aos="fade-up"
+                        data-aos-duration="800"
+                        data-aos-delay="600"
+                        data-aos-mirror="true"
+                        data-aos-once="false"
+                        >Us</span
+                      >
+                    </h2>
+                    <form
+                      id="myForm"
+                      data-aos="fade-up"
+                      data-aos-duration="800"
+                      data-aos-delay="700"
+                      data-aos-mirror="true"
+                      data-aos-once="false"
+                    >
+                      <div class="row">
+                        <div class="col-md-6">
+                          <input
+                            type="text"
+                            id="first_name"
+                            placeholder="Enter first name"
+                          />
+                          <p class="fname-error"></p>
+                        </div>
+                        <div class="col-md-6">
+                          <input
+                            type="text"
+                            id="last_name"
+                            placeholder="Enter last name"
+                          />
+                          <p class="lname-error"></p>
+                        </div>
+                      </div>
+
+                      <input
+                        type="email"
+                        id="email"
+                        placeholder="Enter your e-mail"
+                      />
+                      <p class="email-error"></p>
+
+                      <input
+                        type="text"
+                        id="phone"
+                        placeholder="Enter your phone no."
+                      />
+                      <p class="phone-error"></p>
+
+                      <textarea
+                        id="message"
+                        placeholder="Write Message"
+                        rows="5"
+                      ></textarea>
+                      <p class="msg-error"></p>
+
+                      <button type="submit">Submit Message</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="location-in-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334.0706346017646!2d88.43318712475703!3d22.569078383100436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275abf4cadad9%3A0x617148c6351331b6!2sStesalit%20Tower%2C%20GP%20Block%2C%20Sector%20V%2C%20Bidhannagar%2C%20West%20Bengal%20700091!5e1!3m2!1sen!2sin!4v1762578008240!5m2!1sen!2sin"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
+    </main>
+
     <!-- footer -->
     <footer class="footer">
       <div class="footer-cta">
