Refine contact page text for clarity and adjust CSS box-sizing and overflow properties

--- a/contact.html
+++ b/contact.html
@@ -115,9 +115,8 @@
             >
               Got a spark of an idea or a big project brewing? Don’t keep it to
               yourself — let’s make it happen together! Drop us a message, and
-              our team will get back faster than your morning coffee kicks in
-              ☕. We’re just one click away from turning your vision into
-              reality.
+              our team will get back faster than your morning coffee kicks in.
+              We’re just one click away from turning your vision into reality.
             </p>
             <a
               href="#myForm"
