--- a/career.html
+++ b/career.html
@@ -88,19 +88,13 @@
       <div class="container text-center text-white position-relative">
         <div class="global-wrapper">
           <div class="mx-auto global-content">
-            <h1 class="display-4 fw-bold mb-3" data-aos="fade-left">
-              Join the Team
-            </h1>
-            <p class="lead mb-4 text-light" data-aos="fade-right">
+            <h1 class="display-4 fw-bold mb-3">Join the Team</h1>
+            <p class="lead mb-4 text-light">
               Ready to code your way to greatness? We’re not just another IT
               company we’re a playground for tech enthusiasts, problem-solvers,
               and dreamers who love turning coffee into code.
             </p>
-            <a
-              href="#career-position"
-              class="btn btn-primary px-4 py-2"
-              data-aos="fade-up"
-              data-aos-delay="300"
+            <a href="#career-position" class="btn btn-primary px-4 py-2"
               >View Open Positions</a
             >
           </div>
@@ -117,12 +111,12 @@
             <div
               class="career-reason-content d-flex align-items-center justify-content-center text-center"
             >
-              <h2 class="text-primary mb-5" data-aos="fade-down">
+              <h2 class="text-primary mb-5">
                 What make IT Wings Webtech Solutions a great place to work?
               </h2>
             </div>
             <div class="career-reason-body container my-5">
-              <div class="row g-4 text-center" data-aos="zoom-in">
+              <div class="row g-4 text-center">
                 <div class="col-12 col-sm-6 col-lg-3 career-reason-card">
                   <figure class="mb-3">
                     <img
@@ -194,20 +188,15 @@
           <div class="career-benifits-wrapper">
             <!-- Section Header -->
             <div class="text-center mb-5 career-benifits-content">
-              <h2 class="fw-bold" data-aos="fade-right">
-                What benefits are waiting for you?
-              </h2>
-              <p class="text-muted mt-2" data-aos="fade-left">
+              <h2 class="fw-bold">What benefits are waiting for you?</h2>
+              <p class="text-muted mt-2">
                 IT Wings Webtech Solutions offers a variety of hand-picked
                 benefits you can enjoy!
               </p>
             </div>
 
             <!-- Benefits Cards -->
-            <div
-              class="row g-4 justify-content-center career-benefits-list"
-              data-aos="zoom-out"
-            >
+            <div class="row g-4 justify-content-center career-benefits-list">
               <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-2">
                 <div
                   class="benefit-card text-center p-3 bg-white shadow-sm rounded h-100"
