--- a/contact.html
+++ b/contact.html
@@ -242,41 +242,14 @@
                 </div>
               </div>
 
-              <div
-                class="col-lg-7"
-                data-aos="fade-left"
-                data-aos-duration="1000"
-                data-aos-delay="400"
-                data-aos-mirror="true"
-                data-aos-once="false"
-              >
+              <div class="col-lg-7">
                 <div class="right-part">
                   <div class="contact-container">
-                    <h2
-                      data-aos="fade-up"
-                      data-aos-duration="800"
-                      data-aos-delay="500"
-                      data-aos-mirror="true"
-                      data-aos-once="false"
-                    >
+                    <h2>
                       Contact
-                      <span
-                        data-aos="fade-up"
-                        data-aos-duration="800"
-                        data-aos-delay="600"
-                        data-aos-mirror="true"
-                        data-aos-once="false"
-                        >Us</span
-                      >
+                      <span>Us</span>
                     </h2>
-                    <form
-                      id="myForm"
-                      data-aos="fade-up"
-                      data-aos-duration="800"
-                      data-aos-delay="700"
-                      data-aos-mirror="true"
-                      data-aos-once="false"
-                    >
+                    <form id="myForm">
                       <div class="row">
                         <div class="col-md-6">
                           <input
