--- a/career.html
+++ b/career.html
@@ -451,7 +451,7 @@
                 <div class="career-open-body-right">
                   <div class="job-list">
                     <div class="job-card p-4 mb-4 bg-white shadow-sm rounded">
-                      <h3>Full-Stack Developers</h3>
+                      <h3 class="text-primary">Full-Stack Developers</h3>
                       <ul class="list-inline mt-2 mb-3">
                         <li class="list-inline-item"><a href="#">Tartu</a></li>
                         <li class="list-inline-item">
@@ -473,7 +473,7 @@
 
                     <!-- Add more job cards below, they will stack automatically -->
                     <div class="job-card p-4 mb-4 bg-white shadow-sm rounded">
-                      <h3>Product Manager</h3>
+                      <h3 class="text-primary">Product Manager</h3>
                       <ul class="list-inline mt-2 mb-3">
                         <li class="list-inline-item"><a href="#">Tartu</a></li>
                         <li class="list-inline-item">
@@ -492,7 +492,7 @@
                     </div>
 
                     <div class="job-card p-4 mb-4 bg-white shadow-sm rounded">
-                      <h3>Product Manager</h3>
+                      <h3 class="text-primary">Product Manager</h3>
                       <ul class="list-inline mt-2 mb-3">
                         <li class="list-inline-item"><a href="#">Tartu</a></li>
                         <li class="list-inline-item">
