Add new styles and pages for career and login sections
- Created career.css for styling the career page with global styles, typography, layout utilities, and responsive design.
- Added login.css for styling the login and registration forms with a modern layout and responsive design.
- Introduced main.css to consolidate global styles and variables for the project.
- Updated style.css to include new footer styles and service-related styles.
- Modified elearning.html and service.html to include "Contact Us" link in the navigation.
- Added images for the career section.
- Created landing.html for a new landing page layout.
- Implemented login.html for user authentication with toggle functionality for login and registration forms.
- Added JavaScript functionality for login and registration form toggling and password visibility.
- Created jobs.html and main.js for future development.

--- a/career.html
+++ b/career.html
@@ -59,8 +59,8 @@
                 <li><a href="./service.html">Service</a></li>
                 <li><a href="./elearning.html">E-Learning</a></li>
                 <li><a href="./course.html">Course</a></li>
-                <li><a href="./contact.html">Contact Us</a></li>
                 <li><a href="./career.html" class="activee">Career</a></li>
+                <li><a href="./contact.html">Contact Us</a></li>
               </ul>
             </div>
 
@@ -116,65 +116,73 @@
               </h2>
             </div>
             <div class="career-reason-body container my-5">
-              <div class="row g-4 text-center">
+              <div class="d-flex flex-column g-4 text-center">
                 <div class="col-12 col-sm-6 col-lg-3 career-reason-card">
                   <figure class="mb-3">
                     <img
-                      src="images/career-reason-1.png"
+                      src="images/career-1.jpg"
                       alt="Company Values"
                       class="img-fluid"
                     />
                   </figure>
-                  <h3>Company Values</h3>
-                  <p>
-                    Trust, learning, honesty, and co-operation are the pillars
-                    that sit at the core of what we do.
-                  </p>
+                  <div class="career-reason-card-content">
+                    <h3>Company Values</h3>
+                    <p>
+                      Trust, learning, honesty, and co-operation are the pillars
+                      that sit at the core of what we do.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 career-reason-card">
+                  <div class="career-reason-card-content">
+                    <h3>Friendly atmosphere</h3>
+                    <p>
+                      We hold a positive attitude in order to foster respect and
+                      decency for our entire team.
+                    </p>
+                  </div>
                   <figure class="mb-3">
                     <img
-                      src="images/career-reason-2.png"
+                      src="images/career-2.jpg"
                       alt="Friendly atmosphere"
                       class="img-fluid"
                     />
                   </figure>
-                  <h3>Friendly atmosphere</h3>
-                  <p>
-                    We hold a positive attitude in order to foster respect and
-                    decency for our entire team.
-                  </p>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 career-reason-card">
                   <figure class="mb-3">
                     <img
-                      src="images/career-reason-3.png"
+                      src="images/career-3.jpg"
                       alt="Work-life balance"
                       class="img-fluid"
                     />
                   </figure>
-                  <h3>Work-life balance</h3>
-                  <p>
-                    For us, a healthy personal life is just as important as the
-                    time you spend in the office.
-                  </p>
+                  <div class="career-reason-card-content">
+                    <h3>Work-life balance</h3>
+                    <p>
+                      For us, a healthy personal life is just as important as
+                      the time you spend in the office.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 career-reason-card">
+                  <div class="career-reason-card-content">
+                    <h3>Everyday grow</h3>
+                    <p>
+                      We provide the necessary support to ensure your skills
+                      never stop growing.
+                    </p>
+                  </div>
                   <figure class="mb-3">
                     <img
-                      src="images/career-reason-4.png"
+                      src="images/career-4.jpg"
                       alt="Everyday grow"
                       class="img-fluid"
                     />
                   </figure>
-                  <h3>Everyday grow</h3>
-                  <p>
-                    We provide the necessary support to ensure your skills never
-                    stop growing.
-                  </p>
                 </div>
               </div>
             </div>
@@ -451,7 +459,7 @@
                 <div class="career-open-body-right">
                   <div class="job-list">
                     <div class="job-card p-4 mb-4 bg-white shadow-sm rounded">
-                      <h3 class="text-primary">Full-Stack Developers</h3>
+                      <h3>Full-Stack Developers</h3>
                       <ul class="list-inline mt-2 mb-3">
                         <li class="list-inline-item"><a href="#">Tartu</a></li>
                         <li class="list-inline-item">
@@ -473,7 +481,7 @@
 
                     <!-- Add more job cards below, they will stack automatically -->
                     <div class="job-card p-4 mb-4 bg-white shadow-sm rounded">
-                      <h3 class="text-primary">Product Manager</h3>
+                      <h3>Product Manager</h3>
                       <ul class="list-inline mt-2 mb-3">
                         <li class="list-inline-item"><a href="#">Tartu</a></li>
                         <li class="list-inline-item">
@@ -492,7 +500,7 @@
                     </div>
 
                     <div class="job-card p-4 mb-4 bg-white shadow-sm rounded">
-                      <h3 class="text-primary">Product Manager</h3>
+                      <h3>Product Manager</h3>
                       <ul class="list-inline mt-2 mb-3">
                         <li class="list-inline-item"><a href="#">Tartu</a></li>
                         <li class="list-inline-item">
