--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
                 <li><a href="./service.html">Service</a></li>
                 <li><a href="./elearning.html">E-Learning</a></li>
                 <li><a href="./course.html">Course</a></li>
-                <li><a href="./contact.html" class="activee">Contact Us</a></li>
                 <li><a href="./career.html">Career</a></li>
+                <li><a href="./contact.html" class="activee">Contact Us</a></li>
               </ul>
             </div>
 
@@ -78,6 +78,7 @@
       </nav>
     </header>
 
+    <!-- content banner -->
     <section
       class="global-banner contact-banner"
       data-aos="fade-in"
