Refactor container styles for consistency and update landing page description

--- a/landing.html
+++ b/landing.html
@@ -42,7 +42,11 @@
         <div class="global-wrapper">
           <div class="global-content">
             <h1>Animesh Karan</h1>
-            <p>He is a very very good boy</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ad
+              suscipit soluta incidunt quos provident, earum repellat voluptatum
+              voluptate inventore!
+            </p>
           </div>
         </div>
       </div>
