fix index page banner

--- a/career1.html
+++ b/career1.html
@@ -32,11 +32,42 @@
   </head>
   <body>
     <!-- header -->
+    <header>
+      <nav class="nav-bar">
+        <div class="container">
+          <div class="nav-wrapper d-flex al-center jc-between">
+            <div class="logo d-flex al-center jc-center">
+              <a href="#">
+                <figure>
+                  <img src="images/Baby.png" alt="logo" />
+                </figure>
+              </a>
+
+              <div class="humberger d-none" id="humberger">
+                <i class="fa-solid fa-bars"></i>
+              </div>
+            </div>
+            <div class="nav-menu">
+              <ul class="d-flex al-center">
+                <li><a href="index1.html">Home</a></li>
+                <li><a href="about1.html">About Us</a></li>
+                <li><a href="service1.html">Service</a></li>
+                <li><a href="career1.html" class="active">Career</a></li>
+                <li><a href="contact1.html">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="contact-btn">
+              <a href="contact1.html" target="_blank">Get in touch</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <!-- banner -->
     <section
       class="global-banner"
-      style="background-image: url(images/career-banner.jpg)"
+      style="background-image: url(images/service-banner.jpg)"
     >
       <div class="container">
         <div class="global-wrapper">
@@ -57,14 +88,14 @@
     <!-- footer -->
 
     <!-- jquery -->
-    <script
+    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    ></script> -->
     <!-- owl crousal -->
-    <script
+    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
@@ -75,7 +106,7 @@
       integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    ></script> -->
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
