--- a/index1.html
+++ b/index1.html
@@ -12,21 +12,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- owl crousal -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"
-      integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <!-- Owl Carousel CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    />
+
     <!-- custom css -->
     <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -49,15 +44,15 @@
             </div>
             <div class="nav-menu">
               <ul class="d-flex al-center">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Career</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="index1.html" class="active">Home</a></li>
+                <li><a href="about1.html">About Us</a></li>
+                <li><a href="service1.html">Service</a></li>
+                <li><a href="career1.html">Career</a></li>
+                <li><a href="contact1.html">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
-              <a href="#">Get in touch</a>
+              <a href="contact1.html" target="_blank">Get in touch</a>
             </div>
           </div>
         </div>
@@ -65,19 +60,38 @@
     </header>
 
     <!-- banner -->
-    <section
-      class="global-banner"
-      style="background-image: url(images/service-banner.jpg)"
-    >
-      <div class="container">
-        <div class="global-wrapper">
-          <div class="global-content">
-            <h1>Animesh Karan</h1>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ad
-              suscipit soluta incidunt quos provident, earum repellat voluptatum
-              voluptate inventore!
-            </p>
+    <section class="global-banner">
+      <div class="banner-container">
+        <div class="banner-wrapper">
+          <div class="banner-content">
+            <div class="content-box">
+              <h1>Empowering Businesses with Innovative IT Solutions</h1>
+              <p>
+                We provide end-to-end IT services, from web and mobile
+                development to cloud, automation, and digital transformation.
+                Our goal is to deliver reliable, scalable, and innovative
+                solutions that help businesses grow and succeed.
+              </p>
+
+              <a href="#" class="btn-primary">Build a team →</a>
+            </div>
+          </div>
+          <div class="banner-image">
+            <div class="overlay"></div>
+            <div class="owl-carousel banner-image-list">
+              <figure>
+                <img src="images/career-1.jpg" alt="banner image" />
+              </figure>
+              <figure>
+                <img src="images/career-2.jpg" alt="banner image" />
+              </figure>
+              <figure>
+                <img src="images/service-banner.jpg"banner image" />
+              </figure>
+              <figure>
+                <img src="images/career-4.jpg" alt="banner image" />
+              </figure>
+            </div>
           </div>
         </div>
       </div>
@@ -88,25 +102,19 @@
     <!-- footer -->
 
     <!-- jquery -->
-    <!-- <script
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script> -->
-    <!-- owl crousal -->
-    <!-- <script
+    ></script>
+    <!-- Owl Carousel JS -->
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"
-      integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script> -->
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
