--- a/contact1.html
+++ b/contact1.html
@@ -54,6 +54,81 @@
 
     <!-- main -->
 
+    
+<!-- main -->
+<main>
+
+    <!-- Contact Title Section -->
+    <section class="contact-header">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>We specialize in helping you build a team of expert developers.</p>
+      </div>
+    </section>
+  
+    <!-- Get In Touch Section -->
+    <section class="get-in-touch">
+      <div class="container">
+        <h3>Get in touch</h3>
+        <p>
+          Please feel free to get in touch with us via any convenient means 
+          (phone, whatsapp, email, submit a contact form).
+          We will be glad to answer your questions as soon as possible.
+        </p>
+      </div>
+    </section>
+  
+    <!-- Contact Layout Section -->
+    <section class="contact-form-section">
+      <div class="container">
+  
+        <div class="contact-layout">
+  
+          <div class="contact-map">
+            <!-- map image or bg added later -->
+          </div>
+  
+          <div class="contact-form">
+            <h3>Connect With Your Next Great Hire Today!</h3>
+  
+            <form>
+              <div class="form-group">
+                <input type="text" placeholder="Company" />
+                <input type="text" placeholder="Your Name" />
+              </div>
+  
+              <div class="form-group">
+                <input type="text" placeholder="Phone Number" />
+                <input type="email" placeholder="Email" />
+              </div>
+  
+              <div class="form-group">
+                <textarea placeholder="Project Detail"></textarea>
+              </div>
+  
+              <div class="form-check">
+                <input type="checkbox" />
+                <label>
+                  By sending this form I confirm that I have read and accept the
+                  <a href="#">Privacy Policy</a>.
+                </label>
+              </div>
+  
+              <button class="btn">GET CONSULTATION</button>
+            </form>
+          </div>
+  
+        </div>
+  
+      </div>
+    </section>
+  
+  </main>
+  <!-- end main -->
+  
+  
+  
+
     <!-- footer -->
 
     <!-- jquery -->
