--- a/about1.html
+++ b/about1.html
@@ -53,7 +53,7 @@
                 <li><a href="about1.html">About Us</a></li>
                 <li><a href="service1.html">Service</a></li>
                 <li><a href="career1.html">Career</a></li>
-                <li><a href="contact1.html">Contact Us</a></li>
+                <li><a href="contact1.html" class="active">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
