this is souvik commit

--- a/Technologies1.html
+++ b/Technologies1.html
@@ -88,37 +88,38 @@
         </div>
   
         <div class="tech-grid">
-          <div class="tech-box">React</div>
-          <div class="tech-box">Vue.js</div>
-          <div class="tech-box">Express</div>
-          <div class="tech-box">JavaScript</div>
-          <div class="tech-box">Node.js</div>
-          <div class="tech-box">Java</div>
-          <div class="tech-box">Python</div>
-          <div class="tech-box">PHP</div>
-          <div class="tech-box">Next.js</div>
-          <div class="tech-box">Golang</div>
-          <div class="tech-box">Laravel</div>
-          <div class="tech-box">Symfony</div>
-          <div class="tech-box">Django</div>
-          <div class="tech-box">Express.js</div>
-          <div class="tech-box">Spring</div>
-          <div class="tech-box">iOS</div>
-          <div class="tech-box">React Native</div>
-          <div class="tech-box">Flutter</div>
-          <div class="tech-box">Kotlin</div>
-          <div class="tech-box">Ionic</div>
-          <div class="tech-box">MySQL</div>
-          <div class="tech-box">SQL Server</div>
-          <div class="tech-box">MongoDB</div>
-          <div class="tech-box">Redis</div>
-          <div class="tech-box">Oracle</div>
-          <div class="tech-box">Go</div>
-          <div class="tech-box">Angular</div>
-          <div class="tech-box">Android</div>
-          <div class="tech-box">R Studio</div>
-          <div class="tech-box">Power BI</div>
-          <div class="tech-box">OpenCV</div>
+          <div class="tech-box"><img src="images/Icon/React.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/VueJS.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Express.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/JS.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/NodeJS.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Java.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Python.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Php.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/C.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/GO.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Laravel.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Symfony.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Django.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/ExpreesJS.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Spring.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/iOS.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/ReactNative.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Flutter.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Kotlin.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Ionic.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/MySQL.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/SQLserver.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/MongoDB.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Redis.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Oracle.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Angular.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/Android.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/RStudio.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/PowerBI.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/DotNet.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/NextJS.jpg" alt="React"></div>
+          <div class="tech-box"><img src="images/Icon/OpenCV.jpg" alt="React"></div>
         </div>
   
       </div>
