--- a/career1.html
+++ b/career1.html
@@ -199,9 +199,9 @@
     <!-- footer -->
 
     <!-- jquery -->
-    <script
+    
 
-
+<!-- footer -->
     <footer class="footer">
       <div class="footer-cta">
         <div class="container">
@@ -288,35 +288,28 @@
     </footer>
 
     <!-- jquery -->
-    <!-- <script
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
-    <!-- owl crousal -->
+    <!-- Owl Carousel JS -->
     <script
-=======
-    ></script> -->
-    <!-- owl crousal -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"
-      integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-<<<<<<< HEAD
-    ></script>
-=======
-    ></script> -->
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
+    <!-- aos animation -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        mirror: false,
+        once: true,
+        delay: 600,
+      });
+    </script>
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
