--- a/contact1.html
+++ b/contact1.html
@@ -32,8 +32,6 @@
   </head>
   <body>
     <!-- header -->
-<<<<<<< HEAD
-=======
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -65,16 +63,12 @@
         </div>
       </nav>
     </header>
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
 
     <!-- banner -->
     <section
       class="global-banner"
-<<<<<<< HEAD
       style="background-image: url(images/career-3.jpg)"
-=======
       style="background-image: url(images/service-banner.jpg)"
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
     >
       <div class="container">
         <div class="global-wrapper">
@@ -92,7 +86,6 @@
 
     <!-- main -->
 
-<<<<<<< HEAD
     
 <!-- main -->
 <main>
@@ -171,8 +164,7 @@
     <!-- footer -->
 
     <!-- jquery -->
-    <script
-=======
+    
     <!-- footer -->
     <footer class="footer">
       <div class="footer-cta">
@@ -260,21 +252,17 @@
     </footer>
 
     <!-- jquery -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
     <!-- owl crousal -->
     <script
-=======
-    ></script> -->
+    ></script>
     <!-- owl crousal -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
@@ -285,11 +273,8 @@
       integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
-=======
-    ></script> -->
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
+    ></script> 
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
