--- a/contact1.html
+++ b/contact1.html
@@ -144,6 +144,7 @@
               <li><a href="#">Request a Service</a></li>
               <li><a href="#">Know About Us</a></li>
               <li><a href="#">Join Us</a></li>
+              <li><a href="#">Learn With Us</a></li>
             </ul>
           </div>
         </div>
