fix landing page

--- a/about1.html
+++ b/about1.html
@@ -158,9 +158,9 @@
     <!-- banner -->
     <section
       class="global-banner"
-      style="background-image: url(images/career-banner.jpg);"
+      style="background-image: url(images/career-banner.jpg)"
     >
-    <div class="overlay"></div>
+      <div class="overlay"></div>
       <div class="container">
         <div class="global-wrapper">
           <div class="global-content">
@@ -171,78 +171,141 @@
     </section>
 
     <!-- main -->
+    <main>
+      <!-- Technologies Section -->
+      <section class="technologies">
+        <div class="container">
+          <div class="tech-header">
+            <h2>Technologies</h2>
+            <p>
+              Using the right technology for the right purpose is our strong
+              motto. We can develop complex solutions and tactics to solve time
+              and enhance compatibility.
+            </p>
+          </div>
 
-    <!-- Technologies Section -->
-    <section class="technologies">
-      <div class="container">
-  
-        <div class="tech-header">
-          <h2>Technologies</h2>
-          <p>
-            Using the right technology for the right purpose is our strong motto. We can develop complex 
-            solutions and tactics to solve time and enhance compatibility.
-          </p>
+          <div class="tech-tabs">
+            <ul>
+              <li class="active">All</li>
+              <li>Frontend</li>
+              <li>Backend</li>
+              <li>Frameworks</li>
+              <li>Mobile Apps</li>
+              <li>Database</li>
+              <li>Google</li>
+              <li>Server</li>
+              <li>Hosting</li>
+              <li>DevOps</li>
+              <li>CRM</li>
+              <li>CMS</li>
+              <li>Ecommerce</li>
+              <li>Security</li>
+            </ul>
+          </div>
+
+          <div class="tech-grid">
+            <div class="tech-box">
+              <img src="images/Icon/React.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/VueJS.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Express.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/JS.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/NodeJS.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Java.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Python.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Php.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/C.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/GO.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Laravel.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Symfony.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Django.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/ExpreesJS.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Spring.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/iOS.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/ReactNative.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Flutter.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Kotlin.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Ionic.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/MySQL.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/SQLserver.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/MongoDB.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Redis.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Oracle.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Angular.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/Android.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/RStudio.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/PowerBI.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/DotNet.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/NextJS.jpg" alt="React" />
+            </div>
+            <div class="tech-box">
+              <img src="images/Icon/OpenCV.jpg" alt="React" />
+            </div>
+          </div>
         </div>
-  
-        <div class="tech-tabs">
-          <ul>
-            <li class="active">All</li>
-            <li>Frontend</li>
-            <li>Backend</li>
-            <li>Frameworks</li>
-            <li>Mobile Apps</li>
-            <li>Database</li>
-            <li>Google</li>
-            <li>Server</li>
-            <li>Hosting</li>
-            <li>DevOps</li>
-            <li>CRM</li>
-            <li>CMS</li>
-            <li>Ecommerce</li>
-            <li>Security</li>
-          </ul>
-        </div>
-  
-        <div class="tech-grid">
-          <div class="tech-box"><img src="images/Icon/React.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/VueJS.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Express.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/JS.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/NodeJS.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Java.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Python.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Php.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/C.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/GO.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Laravel.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Symfony.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Django.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/ExpreesJS.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Spring.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/iOS.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/ReactNative.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Flutter.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Kotlin.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Ionic.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/MySQL.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/SQLserver.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/MongoDB.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Redis.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Oracle.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Angular.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/Android.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/RStudio.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/PowerBI.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/DotNet.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/NextJS.jpg" alt="React"></div>
-          <div class="tech-box"><img src="images/Icon/OpenCV.jpg" alt="React"></div>
-        </div>
-  
-      </div>
-    </section>
-  
-    <!-- Contact / Hire Developers Section -->
-    <section class="hire-developers">
+      </section>
+
+      <!-- Contact / Hire Developers Section -->
+      <section class="hire-developers">
         <div class="container">
           <div class="hire-wrapper">
             <div class="hire-image">
@@ -286,7 +349,7 @@
     <!-- main end -->
 
     <!-- footer -->
-     <footer class="footer">
+    <footer class="footer">
       <div class="footer-cta">
         <div class="container">
           <h2>Ready to work with us?</h2>
